# Jazero

./: .dockerignore  .gitignore  README.md  docker-compose.yml  import.sh  kg.dockerfile  pom.xml  start.sh
CDLC/: pom.xml
CDLC/python/: cdlc.py
CDLC/python/api/: Dockerfile
CDLC/python/api/cdlc_web/cdlc/: urls.py  views.py
CDLC/python/api/cdlc_web/cdlc/templates/cdlc/: index.html
CDLC/python/api/cdlc_web/mysite/: settings.py  urls.py
CDLC/python/api/jdlc_web/cdlc/: views.py
CDLC/python/api/jdlc_web/mysite/: settings.py
CDLC/src/main/java/dk/aau/cs/dkwe/edao/calypso/cdlc/: CDLC.java  ScoringType.java
CDLC/src/main/java/dk/aau/cs/dkwe/edao/calypso/cdlc/query/: Query.java  QueryFactory.java
CDLC/src/test/java/dk/aau/cs/dkwe/edao/calypso/cdlc/: TestQuery.java
JDLC/: README.md
JDLC/c/: CMakeLists.txt  README.md
JDLC/c/include/: jazero.h  jdlc.h
JDLC/c/include/connection/: address.h  request.h
JDLC/c/include/driver/: jdlc.h
JDLC/c/include/structures/: property.h  query.h  user.h
JDLC/c/include/utils/: file_utils.h
JDLC/c/src/: cmd.c  enum2str.c  jazero.c  jdlc.c  json_body.c  params.c
JDLC/c/src/connection/: address.c  request.c
JDLC/c/src/driver/: enum2str.c  jdlc.c  json_body.c  params.c
JDLC/c/src/structures/: property.c  query.c  user.c
JDLC/c/src/utils/: file_utils.c
JDLC/c/test/: json_body_test.c  params_test.c
JDLC/c/test/connection/: address_test.c  request_test.c
JDLC/c/test/structures/: property_test.c  query.json  query_test.c
JDLC/c/test/utils/: file_utils_test.c
JDLC/java/: README.md  REAME.md  pom.xml
JDLC/java/src/main/java/dk/aau/cs/dkwe/edao/: Main.java
JDLC/java/src/main/java/dk/aau/cs/dkwe/edao/calypso/cdlc/: JDLC.java
JDLC/java/src/main/java/dk/aau/cs/dkwe/edao/connector/: DataLake.java  DataLakeService.java
JDLC/java/src/test/java/dk/aau/cs/dkwe/edao/calypso/cdlc/: TestCDLC.java  TestJDLC.java
JDLC/python/: README.md  jdlc.py
JDLC/python/api/: Dockerfile
JDLC/python/api/jdlc_web/jdlc/: views.py
JDLC/python/api/jdlc_web/jdlc/templates/jdlc/: index.html
JDLC/python/api/jdlc_web/mysite/: settings.py  urls.py
JDLC/python/jdlc/: jdlc.py
JDLC/src/main/java/dk/aau/cs/dkwe/edao/calypso/cdlc/: CDLC.java  Connector.java
cdlc/: pom.xml
communication/: pom.xml
communication/src/main/java/dk/aau/cs/dkwe/edao/calypso/communication/: Communicator.java  Response.java  ServiceCommunicator.java
communication/src/main/java/dk/aau/cs/dkwe/edao/jazero/communication/: Communicator.java  Response.java  ServiceCommunicator.java
communication/src/test/java/dk/aau/cs/dkwe/edao/calypso/communication/: TestServiceCommunicator.java
communication/src/test/java/dk/aau/cs/dkwe/edao/jazero/communication/: TestServiceCommunicator.java
data-lake/: Dockerfile  pom.xml
data-lake/src/main/java/dk/aau/cs/dkwe/edao/calypso/datalake/: DataLake.java
data-lake/src/main/java/dk/aau/cs/dkwe/edao/calypso/datalake/connector/: DBDriver.java  DBDriverBatch.java  EmbeddingsFactory.java  ExplainableCause.java  Factory.java  Milvus.java  MilvusCommand.java  (+3 more)
data-lake/src/main/java/dk/aau/cs/dkwe/edao/jazero/datalake/: DataLake.java
data-lake/src/main/resources/: application.properties
data-lake/src/test/java/dk/aau/cs/dkwe/edao/calypso/datalake/: DataLakeApplicationTests.java
data-lake/src/test/java/dk/aau/cs/dkwe/edao/jazero/datalake/: DataLakeApplicationTests.java
entity-linker/: Dockerfile  pom.xml
entity-linker/src/main/java/dk/aau/cs/dkwe/edao/calypso/entitylinker/: EntityLinker.java
entity-linker/src/main/java/dk/aau/cs/dkwe/edao/jazero/entitylinker/: EntityLinker.java
entity-linker/src/test/java/dk/aau/cs/dkwe/edao/calypso/entitylinker/: EntityLinkerApplicationTests.java  EntityLinkerTest.java
knowledge-graph/: Dockerfile  pom.xml
knowledge-graph/neo4j/: config.properties  import.sh  insert-links.sh  install.sh  restart.sh  start.sh  stop.sh
knowledge-graph/src/main/java/dk/aau/cs/dkwe/edao/calypso/knowledgegraph/: KnowledgeGraph.java
knowledge-graph/src/main/java/dk/aau/cs/dkwe/edao/jazero/knowledgegraph/: KnowledgeGraph.java
knowledge-graph/src/test/java/dk/aau/cs/dkwe/edao/calypso/knowledgegraph/: EKGManagerTest.java  KnowledgeGraphApplicationTests.java
knowledge-graph/src/test/java/dk/aau/cs/dkwe/edao/jazero/knowledgegraph/: EKGManagerTest.java
storage/: pom.xml
storage/src/main/java/dk/aau/cs/dkwe/edao/calypso/storagelayer/: StorageHandler.java
storage/src/test/java/dk/aau/cs/dkwe/edao/calypso/storagelayer/: StorageHandlerTest.java
web/: .gitignore  Dockerfile  config.json  debug_output.json  docker-compose.yml  first_output.json  pom.xml
web/nginx/: nginx.conf
web/src/main/bundles/: dev.bundle
web/src/main/frontend/themes/search-theme/: search.css
web/src/main/java/dk/aau/cs/dkwe/edao/jazero/web/: Main.java
web/src/main/java/layout/: MainLayout.java
web/src/test/java/com/example/application/inmemorystorage/: InMemoryMessageRepositoryTest.java
(+181 files in other folders)
